--- a/pages/index/signin.wxss
+++ b/pages/index/signin.wxss
@@ -26,6 +26,8 @@ page{
   top:0;left:0;
   width:100%;height:100%;
   opacity:0;
+  font-size:0;
+  color:transparent;
   z-index:0;
 }
 .input-area .main-number{
