--- a/pages/index/signin.wxss
+++ b/pages/index/signin.wxss
@@ -23,7 +23,7 @@ page{
 }
 .input-area .num-input{
   position:absolute;
-  top:0;left:0;
+  top:0;left:-9999rpx;
   width:100%;height:100%;
   opacity:0;
   font-size:0;
