--- a/pages/barrage/index.wxml
+++ b/pages/barrage/index.wxml
@@ -73,6 +73,7 @@
   <!-- 中奖弹窗 -->
   <view class="winning-ibox">
     <image src="img/winning-bg.png"></image>
+    <view class="close"></view>
   </view>
 
   <!-- 抽奖开启弹窗 -->
