--- a/pages/barrage/index.wxss
+++ b/pages/barrage/index.wxss
@@ -183,11 +183,8 @@ page .chat-bottom{
   z-index:8;
 }
 
-.winning-ibox{
-  display:none;
-}
-
 .luck-ibox{
+  display:none;
   position:fixed;
   top:50%;left:50%;
   margin:-65rpx 0 0 -260rpx;
@@ -221,21 +218,20 @@ page .chat-bottom{
   color:#26b8f3;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.winning-ibox{
+  display:none;
+  position:absolute;
+  top:50%;left:50%;
+  margin:-300rpx 0 0 -250rpx;
+  width:500rpx;height:600rpx;
+  z-index:10;
+}
+.winning-ibox image{
+  display:block;
+  width:100%;height:100%;
+}
+.winning-ibox .close{
+  position:absolute;
+  bottom:0;left:0;
+  width:100%;height:90rpx;
+}
