--- a/pages/barrage/index.wxml
+++ b/pages/barrage/index.wxml
@@ -1,4 +1,4 @@
-<view class="chat-content">
+<view class="chat-content" bindtouchmove='bindTouchMove'>
   <image class="chat-bg" src="img/bg.jpg"></image>
   <view class="container">
     <view class="connect">
@@ -7,29 +7,15 @@
     </view>
     <view class="welcome">欢迎<view class="name">琥珀川</view>进入<view class="color">【战旗直播年终狂欢】</view>请尽情的为战旗打CALL!更有丰富的弹幕礼物，等你来领！</view>
     <!-- 聊天区域 -->
-    <view class="chat-li">
-      <view class="chat-li-cont">
-        <view class="name">张吗：</view>666 这个睫毛夹真大
-      </view>
-    </view>
-    <view class="chat-li myself">
-      <view class="chat-li-cont">
-        <view class="name">张吗：</view>666 这个睫毛
-      </view>
-    </view>
-    <view class="chat-li">
-      <view class="chat-li-cont">
-        <view class="name">张吗张吗张吗：</view>666 这个睫毛夹真大这个睫毛夹真大
-      </view>
-    </view>
-    <view class="chat-li">
+    <!--自己加 myself 类-->
+    <view class="chat-li" wx:key wx:for="{{danmakuList}}">
       <view class="chat-li-cont">
         <view class="name">张吗：</view>666 这个睫毛夹真大
       </view>
     </view>
   </view>
   <!-- 激活速弹加类 active-fast -->
-  <view class="chat-bottom active-fast1">
+  <view class="chat-bottom active-fast1" wx:if="{{isVerify}}">
     <view class="chat-input-area">
       <input class="input-area /"></input>
       <!-- 不能发送加类 disable -->
@@ -57,7 +43,7 @@
   </view>
 
   <!-- 抽奖开启按钮 -->
-  <view class="luck-btn">
+  <view class="luck-btn" wx:if="{{isAdmin}}">
     <image src="img/luck-btn.png" ></image>
   </view>
 
@@ -76,7 +62,7 @@
   </view>
 
   <!-- 抽奖开启弹窗 -->
-  <view class="luck-ibox">
+  <view class="luck-ibox" wx:if="{{isAdmin}}">
     <view class="luck-top">目前发放奖励：<view class="num">56份</view></view>
     <view class="luck-bottom">
       <view class="btn-1">取消</view>
