--- a/pages/barrage/index.wxss
+++ b/pages/barrage/index.wxss
@@ -9,8 +9,7 @@ page .chat-bg{
   width:100%;height:100%;
   z-index:0;
 }
-page .container,
-page .chat-bottom{
+page .container{
   position:relative;
   z-index:1;
 }
@@ -161,7 +160,7 @@ page .chat-bottom{
 
 .program-btn{
   position:fixed;
-  right:10rpx;bottom:192rpx;
+  right:10rpx;bottom:340rpx;
   width:106rpx;height:160rpx;
   z-index:5;
 }
@@ -173,7 +172,7 @@ page .chat-bottom{
 
 .luck-btn{
   position:fixed;
-  right:10rpx;bottom:400rpx;
+  right:10rpx;bottom:520rpx;
   width:106rpx;height:200rpx;
   z-index:5;
 }
@@ -257,4 +256,184 @@ page .chat-bottom{
   position:absolute;
   bottom:0;left:0;
   width:100%;height:90rpx;
+}
+
+.guess-btn{
+  position:fixed;
+  bottom:200rpx;right:10rpx;
+  width:106rpx;height:120rpx;
+}
+.guess-btn image{
+  display:block;
+  width:100%;height:100%;
+}
+
+.guess-ibox{
+  position:absolute;
+  top:50%;left:50%;
+  margin:-502rpx 0 0 -319rpx;
+  width:639rpx;height:1005rpx;
+  z-index:10;
+}
+.guess-ibox .close{
+  position:absolute;
+  top:0;right:0;
+  width:80rpx;height:80rpx;
+  z-index:2;
+}
+
+.guess-ibox .guess-top{
+  position:relative;
+  padding-top:107rpx;
+  width:100%;height:217rpx;
+  text-align:center;
+}
+.guess-ibox .guess-bottom{
+  position:relative;
+  width:100%;height:681rpx;
+}
+
+.guess-ibox .guess-top image,
+.guess-ibox .guess-bottom image{
+  position:absolute;
+  top:0;left:0;
+  width:100%;height:100%;
+  z-index:0;
+}
+
+.guess-ibox .guess-top .nothing-text{
+  display:none;
+  position:relative;
+  height:217rpx;line-height:217rpx;
+  font-size:48rpx;color:#7ab1cf;
+  text-align:center;
+  z-index:1;
+}
+.guess-ibox .guess-bottom .nothing-text{
+  display:none;
+  position:relative;
+  height:400rpx;line-height:400rpx;
+  font-size:48rpx;color:#7ab1cf;
+  text-align:center;
+  z-index:1;
+}
+
+.guess-ibox .no-begin .nothing-text{
+  display:block;
+}
+
+.guess-ibox .guess-bottom .guess-thead{
+  position:relative;
+  padding:16rpx 18rpx 0;
+  height:50rpx;
+  overflow:hidden;
+  z-index:1;
+}
+.guess-ibox .guess-bottom .guess-thead li,
+.guess-ibox .guess-bottom .guess-tbody .li{
+  float:left;
+  height:50rpx;line-height:50rpx;
+  font-size:32rpx;color:#7ab1cf;
+  text-align:center;
+}
+.guess-ibox .guess-bottom .guess-thead .li-1,
+.guess-ibox .guess-bottom .guess-tbody .li-1{
+  width:192rpx;
+}
+.guess-ibox .guess-bottom .guess-thead .li-2,
+.guess-ibox .guess-bottom .guess-tbody .li-2{
+  width:230rpx;
+  overflow:hidden;
+  white-space:nowrap;
+  text-overflow:ellipsis;
+}
+.guess-ibox .guess-bottom .guess-thead .li-3,
+.guess-ibox .guess-bottom .guess-tbody .li-3{
+  width:180rpx;
+}
+
+.guess-ibox .guess-top .choose{
+  position:relative;
+  display:inline-block;
+  margin:44rpx 64rpx 0;
+  width:130rpx;height:130rpx;
+  line-height:130rpx;
+  font-size:70rpx;color:#fff;
+  z-index:1;
+}
+.guess-ibox .guess-top .choose .choose-1{
+  background:rgba(255, 91, 126, .3);
+  border-radius:100%;
+}
+.guess-ibox .guess-top .choose .choose-2{
+  background:rgba(52, 146, 251, .3);
+  border-radius:100%;
+}
+
+.guess-ibox .guess-top .active .choose-1{
+  background:#e7395e;
+}
+.guess-ibox .guess-top .active .choose-2{
+  background:#3492fb;
+}
+
+.guess-ibox .guess-bottom .guess-tbody{
+  position:relative;
+  padding:0 18rpx;
+  z-index:1;
+}
+.guess-ibox .guess-bottom .tr{
+  height:56rpx;line-height:56px;
+}
+.guess-ibox .guess-bottom .guess-tbody .li{
+  height:56rpx;
+  color:#fff;
+  font-size:28rpx;
+}
+
+.guess-ibox .guess-bottom .guess-tbody .myself .li{
+  margin-top:6rpx;
+  color:#cae012;
+}
+
+.guess-ibox .no-begin .choose,
+.guess-ibox .no-begin .guess-tbody .tr{
+  display:none;
+}
+
+.guess-ibox-1{
+  position:fixed;
+  top:50%;left:50%;
+  margin:-105rpx 0 0 -260rpx;
+  width:520rpx;height: 210rpx;
+  z-index:11;
+}
+
+.guess-ibox-1 .guess-bg-1{
+  position:absolute;
+  top:0;left:0;
+  width:100%;height:100%;
+  z-index:1;
+}
+.guess-ibox-1 .guess-top{
+  position:relative;
+  height:130rpx;line-height:130rpx;
+  font-size:32rpx;color:#fff;
+  text-align:center;
+  z-index:2;
+}
+.guess-ibox-1 .guess-bottom{
+  position:relative;
+  height:80rpx;line-height:80rpx;
+  font-size:32rpx;color:#fff;
+  z-index:2;
+}
+.guess-ibox-1 .guess-bottom .btn-1,
+.guess-ibox-1 .guess-bottom .btn-2{
+  float:left;
+  width:260rpx;
+  text-align:center;
+}
+.guess-ibox-1 .guess-bottom .btn-2{
+  color:#57a6ff;
 }
