--- a/pages/barrage/index.wxss
+++ b/pages/barrage/index.wxss
@@ -452,7 +452,7 @@ page .container{
 }
 
 .set-ibox{
-  display:none;
+  /* display:none; */
   position:absolute;
   top:50%;left:50%;
   margin:-514rpx 0 0 -308rpx;
@@ -540,4 +540,9 @@ page .container{
   background:rgba(69, 103, 152, .3);
   font-size:38rpx;color:#6c90c7;
   text-align:center;
+}
+.set-ibox .active-set-btn{
+  border-color:#3554d6;
+  background:-webkit-linear-gradient(top, #052177, #1439bc);
+  color:#fff;
 }
