--- a/pages/barrage/index.wxss
+++ b/pages/barrage/index.wxss
@@ -452,7 +452,7 @@ page .container{
 }
 
 .set-ibox{
-  display:none;
+  /* display:none; */
   position:absolute;
   top:50%;left:50%;
   margin:-514rpx 0 0 -308rpx;
