--- a/pages/barrage/index.wxml
+++ b/pages/barrage/index.wxml
@@ -185,6 +185,9 @@
 
   <!-- 设置弹窗 -->
   <view class="set-ibox">
+    <view class="close">
+      <image src="img/close.png"></image>
+    </view>
     <view class="set-title">竞彩开始／关闭按钮</view>
     <!-- 开启竞猜加类 begin-guess -->
     <view class="set-btn-area begin-guess">
