--- a/pages/barrage/index.wxss
+++ b/pages/barrage/index.wxss
@@ -452,7 +452,7 @@ page .container{
 }
 
 .set-ibox{
-  display:none; 
+  display:none;  
   position:absolute;
   top:50%;left:50%;
   margin:-514rpx 0 0 -308rpx;
@@ -460,6 +460,15 @@ page .container{
   border:3rpx solid #1168b1;
   background:rgba(3, 24, 67, .96);
   z-index:11;
+}
+.set-ibox .close{
+  position:absolute;
+  top:20rpx;right:20rpx;
+  width:30rpx;height:30rpx;
+}
+.set-ibox .close image{
+  display:block;
+  width:100%;height:100%;
 }
 
 .set-ibox .set-title{
